--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
   <head>
     <title>StarNotary DAPP</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -17,15 +17,15 @@
 
     <br>
       <h1>Create a Star</h1>
-      <br><label for="starName">Star Name:</label><input type="text" id="starName"></input>
-      <br><label for="starId">Star ID:</label><input type="text" id="starId"></input>
+      <br><label for="starName">Star Name:</label><input type="text" id="starName"/>
+      <br><label for="starId">Star ID:</label><input type="text" id="starId"/>
       <br><br><button id="createStar" onclick="App.createStar()">Create Star</button>
       <br>
       <hr>
       <br>
       <h1>Look up a Star</h1>
-      <br><label for="name">Star ID:</label><input type="text" id="lookid"></input>
-      <br><br><button onclick="App.lookUp()">Look Up a Star</button>
+      <br><label for="lookUpId">Star ID:</label><input type="text" id="lookUpId"/>
+      <br><br><button onclick="App.lookUpStar()">Look Up a Star</button>
       <hr>
       <br>
       <span id="status"></span>
